<resources>
    <string name="to_top">to_top</string>
    <string name="my_integral">我的积分</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_share">我的分享</string>
    <string name="todo">TODO</string>
    <string name="night_mode">夜间模式</string>
    <string name="system_setting">系统设置</string>
    <string name="log_out">退出登录</string>

    <string name="bnv_home">首页</string>
    <string name="bnv_square">广场</string>
    <string name="bnv_wechat">公众号</string>
    <string name="bnv_system">体系</string>
    <string name="bnv_project">项目</string>

</resources>