<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item android:id="@+id/main_nv_menu_integral"
            android:icon="@drawable/main_integral_page_iv_normal"
            android:title="@string/my_integral"
            app:actionViewClass="android.widget.TextView"/>

        <item android:id="@+id/main_nv_menu_collection"
            android:icon="@drawable/main_collection_page_iv_normal"
            android:title="@string/my_collection"/>

        <item android:id="@+id/main_nv_menu_share"
            android:icon="@drawable/main_share_page_iv_normal"
            android:title="@string/my_share"/>

        <item android:id="@+id/main_nv_menu_todo"
            android:icon="@drawable/main_todo_page_iv_normal"
            android:title="@string/todo"/>

        <item android:id="@+id/main_nv_menu_night"
            android:icon="@drawable/main_night_page_iv_normal"
            android:title="@string/night_mode"/>

        <item android:id="@+id/main_nv_menu_setting"
            android:icon="@drawable/main_setting_page_iv_normal"
            android:title="@string/system_setting"/>

        <item android:id="@+id/main_nv_menu_log_out"
            android:icon="@drawable/main_logout_iv_normal"
            android:title="@string/log_out"/>
    </group>
</menu>